@@ -1,4 +1,3 @@
 <div class="article">
-  <dl class="head"></dl>
   <div class="body"></div>
 </div>
