@@ -1,7 +1,7 @@
 <div class="article">
-  <dl class="head"></dl>
   <div class="body">
     <h1><a name="section_title_1"></a>Section Title 1</h1>
+    <dl class="head"></dl>
     <h2><a name="section_title_2"></a>Section Title 2</h2>
     <h3><a name="section_title_3"></a>Section Title 3</h3>
     <h4><a name="section_title_4"></a>Section Title 4</h4>
