@@ -1,7 +1,7 @@
 <div class="article">
-  <dl class="head"></dl>
   <div class="body">
     <h1><a name="main_title"></a>Main Title</h1>
+    <dl class="head"></dl>
     <p>Hello world</p>
     <h2><a name="subsection"></a>Subsection</h2>
     <p>A bit more text, which exceeds one line to test for a simple paragraph with more then one line.</p>
