@@ -1,7 +1,7 @@
 <div class="article">
-  <dl class="head"></dl>
   <div class="body">
     <h1><a name="paragraph_with_inline_markup"></a>Paragraph with inline markup</h1>
+    <dl class="head"></dl>
     <p>Paragraphs contain text and may contain inline markup: <em>emphasis</em>, <strong>strong emphasis</strong>, interpreted text, <code>inline literals</code>, standalone hyperlinks (<a href="http://www.python.org">http://www.python.org</a>), external hyperlinks (<a href="http://python.org">Python</a>), internal cross-references (<a href="http://example.org">example</a>), substitution references (<img src="example.png" alt="Example image"></img>), and <a name="inline_internal_targets">inline internal targets</a>. There are also <a href="http://example.org">anonomyous</a> hyperlinks, which also <a href="http://example.org">may contain more then one word</a>.</p>
     <p><em>Markup</em> is also allwoed at the very beginning of a paragraph.</p>
     <p>Paragraphs are separated by blank lines and are left-aligned.</p>
